--- a/src/app/stickers/stickers.component.html
+++ b/src/app/stickers/stickers.component.html
@@ -25,9 +25,9 @@
         *ngFor="let set of stickerSets$ | async"
         (click)="selectSet(set)"
         class="px-4 py-4 border-b border-gray-200 cursor-pointer"
-        [class.bg-blue-50]="set.id === activeSetId"
+        [class.bg-blue-50]="set.id === currentQuery.as"
       >
-        <div class="font-medium" [class.text-blue-600]="set.id === activeSetId">
+        <div class="font-medium" [class.text-blue-600]="set.id === currentQuery.as">
           {{ set.name }}
         </div>
         <div *ngIf="set?.id !== -1; else clickedLately" class="text-sm text-gray-500">
@@ -64,7 +64,7 @@
         </svg>
       </button>
 
-      <ng-container *ngIf="activeSetId !== -1; then searchInput; else recentlyUsedTitle" />
+      <ng-container *ngIf="currentQuery.as !== -1; then searchInput; else recentlyUsedTitle" />
       <ng-template #searchInput>
         <input
           type="text"
@@ -75,7 +75,7 @@
         />
       </ng-template>
       <ng-template #recentlyUsedTitle>
-        <h1 *ngIf="activeSetId === -1" class="flex-1 text-xl font-semibold text-gray-900">
+        <h1 *ngIf="currentQuery.as === -1" class="flex-1 text-xl font-semibold text-gray-900">
           Recently Used
         </h1>
       </ng-template>
@@ -145,18 +145,18 @@
       class="mt-8 flex justify-center items-center gap-4 absolute bottom-0 left-0 right-0 bg-gray-50 py-6"
     >
       <button
-        (click)="changePage(currentPage - 1)"
-        [disabled]="currentPage === 1"
+        (click)="changePage(currentQuery.p - 1)"
+        [disabled]="currentQuery.p === 1"
         class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
       >
         Previous
       </button>
 
-      <span class="text-sm text-gray-700"> Page {{ currentPage }} of {{ totalPages }} </span>
+      <span class="text-sm text-gray-700"> Page {{ currentQuery.p }} of {{ totalPages }} </span>
 
       <button
-        (click)="changePage(currentPage + 1)"
-        [disabled]="currentPage === totalPages"
+        (click)="changePage(currentQuery.p + 1)"
+        [disabled]="currentQuery.p === totalPages"
         class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
       >
         Next
